Put the hello widget in a scroller

So it doesn't affect the minimum width of the main window.

BUG:408504